k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel-service
  namespace: abaad
spec:
  selector:
    app: laravel
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
